@@ -1,3 +1,8 @@
+2004-05-20  David Schleef  <ds@schleef.org>
+
+	* gst/gstindex.c: (gst_index_compare_func): Fix overflows in
+	comparison code.  (bug #142819)
+
 2004-05-20  Wim Taymans  <wim@fluendo.com>
 
 	* gst/gstbuffer.c: (gst_buffer_default_copy):
